v-storage/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v-storage
  labels:
    app: v-storage
spec:
  selector:
    matchLabels:
      app: v-storage
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: v-storage
    spec:
      containers:
      - name: v-storage
        image: ducdm99tb/v-storage:1.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: v-storage-data
            mountPath: /v_storage/v_storage/data
      volumes:
        - name: v-storage-data
          persistentVolumeClaim:
            claimName: v-storage-pvc
      imagePullSecrets:
      - name: token-docker
      restartPolicy: Always
