v-storage/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: v-storage-service
spec:
    type: NodePort
    selector:
        app: v-storage
    ports:
        - port: 80
          targetPort: 8080
          protocol: TCP
