v-storage/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: v-storage-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/default-backend: v-storage-service
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
spec:
  ingressClassName: nginx
  rules:
    - host: storage.v-chain.vn
      http:
        paths:
        - pathType: Prefix
          path: /?(.*)
          backend:
            service:
              name: v-storage-service
              port:
                number: 80
